--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Bootstrap Buttons</h1>
-	<button id="button-1" class="btn btn-primary" >Button-1</button>
+	<!-- <button id="button-1" class="btn btn-primary" >Button-1</button>
     <button id="button-2" class="btn btn-outline-secondary">Button-2</button>
 	<button id="button-3" class="btn btn-success btn-lg">Button-3</button>
     <button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
@@ -18,7 +18,15 @@
 	<button id="button-6" class="btn btn-info " disabled>Button-6</button>
 	<button id="button-7" class="btn btn-light">Button-7</button>
 	<button id="button-8" class="btn btn-link">Button-8</button>
-	
+	 -->
+	<button id="button-1" class="btn btn-primary">Primary Button</button>
+	<button id="button-2" class="btn btn-outline-secondary">Secondary Button</button>
+	<button id="button-3" class="btn btn-success btn-lg">Large Success Button</button>
+	<button id="button-4" class="btn btn-danger btn-sm">Small Danger Button</button>
+	<button id="button-5" class="btn btn-warning w-100">Full Width Warning Button</button>
+	<button id="button-6" class="btn btn-info" disabled>Disabled Info Button</button>
+	<button id="button-7" class="btn btn-light">Light Button</button>
+	<button id="button-8" class="btn btn-link">Link Button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
