--- a/main.html
+++ b/main.html
@@ -23,10 +23,10 @@
 	<button id="button-2" class="btn btn-outline-secondary">Secondary Button</button>
 	<button id="button-3" class="btn btn-success btn-lg">Large Success Button</button>
 	<button id="button-4" class="btn btn-danger btn-sm">Small Danger Button</button>
-	<button id="button-5" class="btn btn-warning w-100">Full Width Warning Button</button>
-	<button id="button-6" class="btn btn-info" disabled>Disabled Info Button</button>
-	<button id="button-7" class="btn btn-light">Light Button</button>
-	<button id="button-8" class="btn btn-link">Link Button</button>
+	<button id="button-5" class="btn btn-warning btn-lg vw-100">Full Width Warning Button</button>
+	<button id="button-6" class="btn btn-info disabled" >Disabled Info Button</button>
+	<button id="button-7" class="btn btn-light">Light Button 7</button>
+	<button id="button-8" class="btn btn-link">Link Button 8</button>
   
 </script>
 
